tests/derive-tests/try_into/fail/struct.err.txt
error: expected `enum`
 --> /tests/derive-tests/try_into/fail/struct.rs:4:5
  |
4 | pub struct Struct {
  |     ^^^^^^
